[metadata]
name = BabyStep
version = 0.0.1
description = All Basic sorting and search
long_description = file: README.md
long_description_content_type = text/markdown
author = Muthukumaran
author_email = titansmuthu@gmail.com
url = https://github.com/titans2024/baby.git
download_url = https://github.com/titans2024/baby/archive/refs/heads/main.zip
license='MIT License'  # Ensure 'license_file' is used instead of 'license-file'
[options]
packages = find:
